--- a/src/malwindow.scss
+++ b/src/malwindow.scss
@@ -75,6 +75,7 @@ $tragetH: 80px;
   border-right: 2px solid #e8e8e8;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
   // border-left: 4px solid transparent;
   // border-right: 4px solid transparent;
   > div {
@@ -92,6 +93,10 @@ $tragetH: 80px;
 
     &.selected {
       background-color: rgb(9, 71, 113);;
+    }
+
+    &:hover {
+      background-color: rgba(9, 71, 113,0.5);;
     }
 
     span {
@@ -114,6 +119,10 @@ $tragetH: 80px;
     .href {
       opacity: 0.7;
       color: $functionNameColor;
+      &:hover {
+        opacity:1;
+        color: $varColor;
+      }
     }
   }
 }
