fix input style

--- a/src/malwindow.scss
+++ b/src/malwindow.scss
@@ -48,7 +48,7 @@ $backgroundMain: #1f1f1f;
         max-width: 100%;
       }
   }
-  >input {
+  >div>input {
     height: 29px;
     background-color: $backgroundMain;
     line-height: 29px;
