iframe/window labels are now white

--- a/src/malwindow.scss
+++ b/src/malwindow.scss
@@ -179,6 +179,7 @@ $tragetH: 80px;
   max-height: 50%;
   height: calc(100% - 50vh);
   position: relative;
+  color: white;
   
   .href {
     height: 2em;
